# splendor

./: .gitignore  README.md  pyproject.toml
data/: pokemon.jsonl
docs/: rl-guide.md
docs/superpowers/plans/: 2026-05-31-agents.md  2026-05-31-game-engine.md  2026-06-02-alpha-agent.md  2026-06-02-mcts-agent.md  2026-06-02-web-interface.md  2026-06-05-mobile-layout.md  2026-06-05-tutorial.md  2026-06-09-configurable-network-size.md  2026-06-10-differential-agent-rewrite.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.article.config.ts  vite.config.ts
frontend/article/: Article.svelte  README.md  index.html  main.ts  style.css
frontend/docs/: test-spec.md
frontend/scripts/: check-bundle-size.mjs
frontend/src/: App.svelte
frontend/src/lib/: ws.ts  (+8 more)
scripts/: export_article_data.py  export_onnx.py  migrate_alpha_checkpoints.py  record_replay.py
scripts/article_export/: log_parser.py  models.py  narrative.py  network_spec.py  onnx_export.py  replay_recorder.py  writer.py
server/: action_events.py  agents.py  config.py  game_session.py  main.py  serializer.py
src/pokemon_splendor/: __main__.py  models.py
tests/: conftest.py  test_actions.py  test_agents.py  test_alpha.py  test_game.py  test_loader.py  test_mcts.py  test_network_compat.py  test_rules.py
tests/article_export/: test_log_parser.py  test_models.py  test_narrative.py  test_network_spec.py  test_onnx_export.py  test_replay_recorder.py  test_replay_recorder_snapshots.py  test_writer.py
tests/server/: test_action_events.py  test_game_session.py  test_serializer.py
(+99 files in other folders)
