[project]
name = "pokemon-splendor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pettingzoo>=1.24.0",
    "gymnasium>=0.29.0",
    "numpy>=1.26.0",
    "stable-baselines3>=2.3.0",
    "torch>=2.2.0",
    "rich>=13.0.0",
]

[project.scripts]
pokemon-splendor = "pokemon_splendor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0.0"]
